# arduino-base

./: Makefile  README.md
src/: .gitignore  CMakeLists.txt
src/examples/: demo.cpp  demo.h
src/examples/arduino-demo-project/: arduino-debug-utils.h  arduino-demo-project.ino  demo.h
src/lib/: arduino-debug-utils.h  attiny84.h  attiny85.h
src/spec/: demo.spec.cpp  specs.cpp
